# mgcoursework

./: .gitignore  README.md
src/: CMakeLists.txt  TODO  enums.h  main.cpp  remarks.txt
src/application/: CMakeLists.txt  application.cpp  application.h
src/base_objects/: CMakeLists.txt  material_property.cpp  material_property.h  matrix3f.h  matrix3f.inl  matrix4f.h  matrix4f.inl  rectangle.cpp  rectangle.h  rib.cpp  rib.h  vector2f.h  vector2f.inl  vector3f.h  vector3f.inl  vector4f.h  vector4f.inl  vertex.cpp  vertex.h  water_vertex.cpp  water_vertex.h
src/bench_results/: 1440_960.txt  360_240.txt  540_360.txt  720_480.txt  900_600.txt  guro_900_600_1L.txt  guro_900_600_1LM.txt  guro_900_600_1SL.txt  guro_900_600_1SLM.txt  guro_900_600_2L.txt  guro_900_600_2LM.txt  guro_900_600_2SL.txt  guro_900_600_2SLM.txt  guro_900_600_3L.txt  guro_900_600_3LM.txt  guro_900_600_3SL.txt  guro_900_600_3SLM.txt  guro_900_600_4L.txt  guro_900_600_4LM.txt  guro_900_600_4SL.txt  guro_900_600_4SLM.txt  guro_900_600_5L.txt  guro_900_600_5LM.txt  guro_900_600_5SL.txt  guro_900_600_5SLM.txt  guro_900_600_6L.txt  guro_900_600_6LM.txt  guro_900_600_6SL.txt  guro_900_600_6SLM.txt  guro_900_600_7L.txt  guro_900_600_7LM.txt  guro_900_600_7SL.txt  guro_900_600_7SLM.txt  guro_900_600_8L.txt  guro_900_600_8LM.txt  guro_900_600_8SL.txt  guro_900_600_8SLM.txt
src/commands/: CMakeLists.txt  application_commands.h  basecommand.cpp  basecommand.h  camera_command.cpp  camera_command.h  drawcommand.cpp  drawcommand.h  landscape_commands.cpp  landscape_commands.h  light_sources_commands.cpp  light_sources_commands.h  scene_commands.cpp  scene_commands.h
src/errors/: application_exceptions.h  baseexception.h  logicexceptions.h  math_exceptions.h  runtime_exceptions.h
src/frame_buffers/: CMakeLists.txt  frame_buffer.cpp  frame_buffer.h  z_buffer.cpp  z_buffer.h
src/graphics/: CMakeLists.txt  base_drawer.cpp  base_drawer.h  graphicsfactory.cpp  graphicsfactory.h
src/graphics/dynamic_qt/: dynamic_qt_drawer.cpp  dynamic_qt_drawer.h  dynamic_qt_factory.cpp  dynamic_qt_factory.h
src/graphics/glfw/: glfw_drawer.cpp  glfw_drawer.h  glfw_factory.cpp  glfw_factory.h
src/graphics/qt/: qt_drawer.cpp  qt_drawer.h  qt_factory.cpp  qt_factory.h
src/gui/: CMakeLists.txt  color_edit_record.cpp  color_edit_record.h  color_selector.cpp  color_selector.h  direct_light_setup_widget.cpp  direct_light_setup_widget.h  direct_light_setup_widget.ui  gradient_slider.cpp  gradient_slider.h  light_manager_widget.cpp  light_manager_widget.h  light_manager_widget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lightmap/: CMakeLists.txt  iprocedural_lightmapping.cpp  iprocedural_lightmapping.h  lightmap_generator.cpp  lightmap_generator.h  lightmap_pool.cpp  lightmap_pool.h
src/managers/: CMakeLists.txt  basemanager.cpp  basemanager.h  drawmanager.cpp  drawmanager.h  scenemanager.cpp  scenemanager.h  terrainmanager.cpp  terrainmanager.h
src/math/: math.h  math.inl
src/painter/: CMakeLists.txt  base_painter.cpp  base_painter.h  default_painter.cpp  default_painter.h  gradient.cpp  gradient.h  gradient_painter.cpp  gradient_painter.h
src/primitives/: CMakeLists.txt  camera.cpp  camera.h  clipping_space.cpp  clipping_space.h  details.cpp  details.h  ebo_setuper.cpp  ebo_setuper.h  framemodel.cpp  framemodel.h  iframe_transformable.h  iframe_transformable.inl  ipoly_transformable.h  ipoly_transformable.inl  iterrain_object.cpp  iterrain_object.h  lightsource.cpp  lightsource.h  polygonmodel.cpp  polygonmodel.h  sceneobject.cpp  sceneobject.h  terrain_frame_model.cpp  terrain_frame_model.h  terrain_polygon_model.cpp  terrain_polygon_model.h
src/primitives/clipping_spaces/: piramid_clipping_space.cpp  piramid_clipping_space.h  rect_clipping_space.cpp  rect_clipping_space.h
src/primitives/ebo_setupers/: from_grid_setuper.cpp  from_grid_setuper.h
src/primitives/light_types/: direct_light_source.cpp  direct_light_source.h
src/scene/: CMakeLists.txt  scene.cpp  scene.h  scene_selector.cpp  scene_selector.h
src/shaders/: CMakeLists.txt  fragment_shader.cpp  fragment_shader.h  shader_types.h  vertex_shader.cpp  vertex_shader.h
src/shaders/fragment_shaders/: gouraud_fragment_shader.cpp  gouraud_fragment_shader.h  phong_fragment_shader.cpp  phong_fragment_shader.h  simple_fragment_shader.cpp  simple_fragment_shader.h
src/shadowmap/: CMakeLists.txt  shadowmap_pool.cpp  shadowmap_pool.h
src/terrain/: CMakeLists.txt  grid.cpp  grid.h  grid_generator.cpp  grid_generator.h  grid_loader.cpp  grid_loader.h  grid_loader_director.cpp  grid_loader_director.h  grid_saver.cpp  grid_saver.h  ilandscape_mask.cpp  ilandscape_mask.h  terrainblock.cpp  terrainblock.h
src/terrain/generators/: default_generator.h  dsgenerator.cpp  dsgenerator.h  inclined_plane_generator.h  mdsgenerator.cpp  mdsgenerator.h  new_dsgenerator.cpp  new_dsgenerator.h  pngenerator.cpp  pngenerator.h  spngenerator.cpp  spngenerator.h
src/terrain/grid_loaders/: file_grid_loader.cpp  file_grid_loader.h  file_grid_loader_director.cpp  file_grid_loader_director.h
src/terrain/grid_savers/: file_grid_saver.cpp  file_grid_saver.h
src/terrain/landscape_masks/: default_landscape_mask.cpp  default_landscape_mask.h  hill_mask_decorator.cpp  hill_mask_decorator.h  smooth_mask_decorator.cpp  smooth_mask_decorator.h  torus_mask_decorator.cpp  torus_mask_decorator.h
src/tests/: CMakeLists.txt
src/tests/math/: CMakeLists.txt  (+1 more)
src/visitors/: CMakeLists.txt  drawvisitor.cpp  drawvisitor.h  shadow_generator.cpp  shadow_generator.h  visitor.cpp  visitor.h
(+3 files in other folders)
